<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    tools:context=".permutation">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNumber3"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/edit_style"
        android:ems="10"
        android:hint="@string/enter_n"
        android:inputType="number"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextNumber4"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/edit_style"
        android:ems="10"
        android:hint="@string/enter_r"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber3"
        app:layout_constraintVertical_bias="0.076" />
    <Button
        android:id="@+id/button"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:backgroundTint="#FFEB3B"
        android:text="@string/submit"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber4"
        app:layout_constraintVertical_bias="0.087"
        app:shapeAppearanceOverlay="@style/Button5" />
</androidx.constraintlayout.widget.ConstraintLayout>